# algorithms

./: .editorconfig  .gitignore  .rubocop.yml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENCE  README.md  package.json  test_trie.py  trie.py  trie_plan.md
array/: flatten.py  rotate_list.py
backtrack/: combination_sum.py  expression_add_operators.py  factor_combinations.py  generate_abbreviations.py  generate_parenthesis.py  letter_combination.py  palindrome_partitioning.py  pattern_match.py  permute.py  permute_unique.py  subsets.hs  subsets.py  subsets_unique.py  word_search.py
bfs/: shortest_distance_from_all_buildings.py  word_ladder.py
bit/: add_without_operator.py  bytes_int_conversion.py  count_ones.py  single_number2.py  subsets.py
calculator/: math_parser.py
codewars/: mines.py  molecules.py
dfs/: all_factors.py  count_islands.py  pacific_atlantic.py  sudoku_solver.py  walls_and_gates.py
dp/: climbing_stairs.py  coin_change.py  combination_sum.py  edit_distance.py  egg_drop.py  house_robber.py  inversions.py  job_scheduling.py  longest_increasing.py  matrix_chain_order.py  max_product_subarray.py  min_cost_path.py  new_problem.py  num_decodings.py  regex_matching.py  rod_cut.py  test_edit_distance.py  word_break.py
graph/: adaptive_edge_exploration.rs  checkDiGraphStronglyConnected.py  clone_graph.py  cycle_detection.py  dijkstra.py  dijkstra.rs  find_path.py  graph.py  longest_simple_path.py  markov_chain.py  minimum_spanning_tree.py  pathBetweenTwoVerticesInDiGraph.py  satisfiability.py  tarjan.py  test_dijkstra.py  (+1 more)
(+629 files in other folders)
