[package]
name = "algorithms"
version = "1.0.0"
edition = "2018"

[dependencies]
itertools = "0.8.2"

[[bin]]
name = "circular_counter"
path = "array/circular_counter/circular_counter.rs"

[[bin]]
name = "bubble_sort"
path = "sort/bubble_sort/bubble_sort.rs"

[[bin]]
name = "merge_sort"
path = "sort/merge_sort/merge_sort.rs"

[[bin]]
name = "aoc-2019-d1"
path = "adventofcode/2019/d1/d1.rs"

[[bin]]
name = "aoc-2019-d2"
path = "adventofcode/2019/d2/d2.rs"

[[bin]]
name = "aoc-2019-d4"
path = "adventofcode/2019/d4/d4.rs"

[[bin]]
name = "aoc-2019-d8"
path = "adventofcode/2019/d8/d8.rs"
